[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"]  }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.25.0", features = ["full"] }
warp = "0.3.3"
handle-errors = { path = "handle-errors" }
uuid = { version = "1.3.1", features = ["v4"]}
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }